# SPOJ

./: AL_12_03.cpp  BALANCE.cpp  BSHEEP.cpp  BUGLIFE.cpp  Biorythms.cpp  CMakeLists.txt  DPEQN.cpp  FACT0.cpp  FACTORIZ.cpp  FUNNUMS.cpp  KAMELNEO.cpp  KOTYYYYY.cpp  Krzyzak.cpp  NHAY.cpp  PARTY.cpp  PHONELST.cpp  PT07Z.cpp  PocketBook.cpp  TETRAHRD.cpp  TETRASUM.cpp  VECTAR.cpp  XIWTPZA.cpp  kap.cpp  mst.cpp  mwpz2014l.cpp  template.cpp  tprimes.cpp  zad1.cpp
