cmake_minimum_required(VERSION 3.3)
project(test_build)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(BUILD_1 main_1)
set(SOURCE_FILES_1 AL_12_03.cpp NHAY.cpp PHONELST.cpp VECTAR.cpp VECTAR.cpp PT07Z.cpp mst.cpp BALANCE.cpp PARTY.cpp kap.cpp)
add_executable(${BUILD_1} ${SOURCE_FILES_1})

set(BUILD_2 main_2)
set(SOURCE_FILES_2 KOTYYYYY.cpp)
add_executable(${BUILD_2} ${SOURCE_FILES_2})

set(BUILD_3 main_3)
set(SOURCE_FILES_3 XIWTPZA.cpp)
add_executable(${BUILD_3} ${SOURCE_FILES_3})

set(BUILD_4 main_4)
set(SOURCE_FILES_4 Krzyzak.cpp)
add_executable(${BUILD_4} ${SOURCE_FILES_4})

set(BUILD_5 main_5)
set(SOURCE_FILES_5 mwpz2014l.cpp)
add_executable(${BUILD_5} ${SOURCE_FILES_5})

set(BUILD_6 main_6)
set(SOURCE_FILES_6 BSHEEP.cpp)
add_executable(${BUILD_6} ${SOURCE_FILES_6})

set(BUILD_7 main_7)
set(SOURCE_FILES_7 tprimes.cpp)
add_executable(${BUILD_7} ${SOURCE_FILES_7})

set(BUILD_8 main_8)
set(SOURCE_FILES_8 FACTORIZ.cpp)
add_executable(${BUILD_8} ${SOURCE_FILES_8})

set(BUILD_9 main_9)
set(SOURCE_FILES_9 FACT0.cpp)
add_executable(${BUILD_9} ${SOURCE_FILES_9})

set(BUILD_10 main_10)
set(SOURCE_FILES_10 KAMELNEO.cpp)
add_executable(${BUILD_10} ${SOURCE_FILES_10})

set(BUILD_11 main_11)
set(SOURCE_FILES_11 TETRAHRD.cpp)
add_executable(${BUILD_11} ${SOURCE_FILES_11})

set(BUILD_12 main_12)
set(SOURCE_FILES_12 Biorythms.cpp)
add_executable(${BUILD_12} ${SOURCE_FILES_12})

set(BUILD_13 main_13)
set(SOURCE_FILES_13 DPEQN.cpp)
add_executable(${BUILD_13} ${SOURCE_FILES_13})

set(BUILD_14 zad1)
set(SOURCE_FILES_14 zad1.cpp)
add_executable(${BUILD_14} ${SOURCE_FILES_14})

set(BUILD_15 main_15)
set(SOURCE_FILES_15 PocketBook.cpp)
add_executable(${BUILD_15} ${SOURCE_FILES_15})

set(BUILD_16 main_16)
set(SOURCE_FILES_16 FUNNUMS.cpp)
add_executable(${BUILD_16} ${SOURCE_FILES_16})

set(BUILD_17 main_17)
set(SOURCE_FILES_17 NHAY.cpp)
add_executable(${BUILD_17} ${SOURCE_FILES_17})

set(BUILD_18 main_18)
set(SOURCE_FILES_18 PHONELST.cpp)
add_executable(${BUILD_18} ${SOURCE_FILES_18})

set(BUILD_19 main_19)
set(SOURCE_FILES_19 VECTAR.cpp)
add_executable(${BUILD_19} ${SOURCE_FILES_19})

set(BUILD_20 main_20)
set(SOURCE_FILES_20 BUGLIFE.cpp)
add_executable(${BUILD_20} ${SOURCE_FILES_20})

set(BUILD_21 main_21)
set(SOURCE_FILES_21 PT07Z.cpp)
add_executable(${BUILD_21} ${SOURCE_FILES_21})

set(BUILD_22 main_22)
set(SOURCE_FILES_22 mst.cpp)
add_executable(${BUILD_22} ${SOURCE_FILES_22})

set(BUILD_23 main_23)
set(SOURCE_FILES_23 BALANCE.cpp)
add_executable(${BUILD_23} ${SOURCE_FILES_23})

set(BUILD_24 main_24)
set(SOURCE_FILES_24 PARTY.cpp)
add_executable(${BUILD_24} ${SOURCE_FILES_24})

set(BUILD_25 main_25)
set(SOURCE_FILES_25 kap.cpp)
add_executable(${BUILD_25} ${SOURCE_FILES_25})